dhall/tests/type-inference/failure/unit/MistypedToMap4.txt
Type error: error: Annotation mismatch
 --> <current file>:1:1
  |
1 | toMap { foo= 1, bar= 4 } : List { mapKey : Text, mapValue : Text }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Annotation mismatch
  |
